fixed collapsing filters

--- a/resources/assets/less/helper-classes.less
+++ b/resources/assets/less/helper-classes.less
@@ -13,7 +13,7 @@
   filter: alpha(opacity=100);
   vertical-align: top;
   transition: color .2s linear;
-  
+
   &:hover {
     color: #1e1e1e;
     opacity: 1;
@@ -28,12 +28,13 @@
     vertical-align: top;
   }
 }
+
 a.edit {
   color: #707070;
   font-size: 12px;
   text-decoration: none;
   transition: opacity .2s linear;
-  
+
   &:hover {
     color: #707070;
     opacity: 0.8;
@@ -46,20 +47,21 @@ a.edit {
     margin: 0;
   }
 }
+
 .rating-box {
   background-image: url("../img/svg/rating.svg"), none;
   background-repeat: no-repeat;
   background-position: 0 0;
   height: 12px;
   width: 73px;
-  
- .rating {
+
+  .rating {
     height: 12px;
     margin: 0;
     overflow: hidden;
     padding: 0;
     width: 73px;
-    
+
     * {
       vertical-align: top;
     }
@@ -78,11 +80,12 @@ a.edit {
     }
   }
 }
+
 .reviews-box {
   color: #7f7f7f;
   font-size: 12px;
   line-height: 14px;
-  
+
   .rating-box {
     float: left;
     margin: 0 20px 0 0;
@@ -93,7 +96,7 @@ a.edit {
   .add-review {
     color: #7f7f7f;
     text-decoration: none;
-    
+
     &:hover {
       opacity: .8;
       filter: alpha(opacity=80);
@@ -102,24 +105,31 @@ a.edit {
     }
   }
 }
+
 .display-t {
   display: table;
 }
+
 .display-tc {
   display: table-cell;
 }
+
 .slim {
   font-weight: normal;
 }
+
 .border-radius {
   border-radius: 5px;
 }
+
 .bg {
   background-color: #f2f2f2;
 }
+
 .border {
   border-width: 1px;
 }
+
 .width-auto .col-md-1,
 .width-auto .col-md-2,
 .width-auto .col-md-3,
@@ -135,18 +145,23 @@ a.edit {
   float: left;
   width: auto;
 }
+
 .margin-center {
   margin: 0 auto;
 }
+
 .bottom-padding {
   margin-bottom: 80px;
 }
+
 .bottom-padding-mini {
   margin-bottom: 40px;
 }
+
 .bottom-padding.last {
   margin-bottom: 0;
 }
+
 .no-top-padding {
   padding-top: 0 !important;
 }
@@ -157,7 +172,7 @@ a.edit {
   -webkit-perspective: 600px;
   -moz-perspective: 600px;
   perspective: 600px;
-  
+
   &.product,
   &.employee {
     overflow: visible;
@@ -221,20 +236,22 @@ a.edit {
     }
   }
 }
-.btn.dropdown-toggle, 
+
+.btn.dropdown-toggle,
 .btn.dropdown-toggle:hover,
 .btn.dropdown-toggle:focus {
   outline: none;
 }
+
 .btn-group.btn-select {
   color: #7f7f7f;
   font-size: 12px;
   vertical-align: top;
-  
+
   .dropdown-toggle {
-    background: rgba(255,255,255,.1);
+    background: rgba(255, 255, 255, .1);
     border: 1px solid transparent;
-    box-shadow: none;  
+    box-shadow: none;
     color: #7f7f7f;
     font-size: 12px;
     height: 24px;
@@ -244,7 +261,7 @@ a.edit {
   }
   .btn.dropdown-toggle .caret {
     color: #fff;
-    color: rgba(255,255,255,.5);
+    color: rgba(255, 255, 255, .5);
     margin-left: 0;
   }
   &.open {
@@ -253,9 +270,9 @@ a.edit {
       border: 1px solid #ccc;
       border-bottom: 0 none;
       border-radius: 3px 3px 0 0;
-      box-shadow: 0 0 5px rgba(0,0,0,.15);
+      box-shadow: 0 0 5px rgba(0, 0, 0, .15);
       color: #7f7f7f;
-      
+
       &:after {
         background: #fff;
         bottom: 0;
@@ -281,12 +298,12 @@ a.edit {
     margin: 0;
     padding-top: 8px;
     z-index: 25;
-    
+
     > li > a {
       font-size: 12px;
       line-height: 22px;
       padding: 4px 6px;
-      
+
       &:hover {
         background: #f2f2f2;
       }
@@ -297,22 +314,26 @@ a.edit {
     }
   }
 }
+
 .jslider .jslider-pointer {
   background: none;
   height: 12px;
   margin: 0 0 0 -4px;
   width: 8px;
-  
+
   svg {
     vertical-align: top;
   }
 }
+
 .pagination-box {
   margin: 40px 0 0;
 }
+
 .pagination-box .pagination {
   margin: 0 10px 0 0;
 }
+
 .map-box {
   iframe {
     border: 0 none;
@@ -323,27 +344,30 @@ a.edit {
     max-width: inherit;
   }
 }
+
 .map-canvas {
   height: 400px;
-  
+
   * {
     border: 0 none;
   }
 }
+
 .map-content {
-  width: 200px;  
-  
+  width: 200px;
+
   .title {
     font-size: 16px;
     margin-bottom: 10px;
   }
 }
+
 .caret {
   color: #777;
   border: 0 none;
   height: 6px;
   width: 9px;
-  
+
   &:before {
     content: "\f107";
     display: block;
@@ -369,19 +393,22 @@ a.edit {
   .dropup &,
   .navbar-fixed-bottom .dropdown & {
     border: 0 none;
-    
+
     &:before {
       content: "\f106";
     }
   }
 }
+
 .help-block {
   margin-top: -10px;
   margin-bottom: 15px;
 }
+
 .buttons-box .required {
   font-size: 11px;
 }
+
 /* Social */
 .social {
   .social-list {
@@ -401,7 +428,7 @@ a.edit {
     transition: opacity .2s linear;
     text-align: center;
     width: 40px;
-    
+
     &:hover {
       opacity: 1;
       filter: alpha(opacity=100);
@@ -421,14 +448,16 @@ a.edit {
     background: #1b92bd;
   }
 }
+
 /* Filter */
 .filter-elements-wrapper {
   margin: 0 auto;
 }
+
 .filter-buttons {
   display: block;
   margin-bottom: 30px;
-  
+
   .dropdown-toggle {
     background: transparent;
     border: 1px solid #e1e1e1;
@@ -442,7 +471,7 @@ a.edit {
     margin-right: 20px;
     padding: 0 10px 0 20px;
     transition: opacity .2s ease-out;
-    
+
     .caret {
       margin: -2px 0 0 5px;
     }
@@ -456,7 +485,7 @@ a.edit {
   }
   .dropdown-menu {
     border: 1px solid #e1e1e1;
-    
+
     .active {
       background-color: #f5f5f5;
     }
@@ -473,6 +502,7 @@ a.edit {
     }
   }
 }
+
 /* Isotop */
 .isotope,
 .isotope .isotope-item {
@@ -482,6 +512,7 @@ a.edit {
   -o-transition-duration: 0.8s;
   transition-duration: 0.8s;
 }
+
 .isotope {
   -webkit-transition-property: height, width;
   -moz-transition-property: height, width;
@@ -489,6 +520,7 @@ a.edit {
   -o-transition-property: height, width;
   transition-property: height, width;
 }
+
 .isotope .isotope-item {
   -webkit-transition-property: -webkit-transform, opacity;
   -moz-transition-property: -moz-transform, opacity;
@@ -496,6 +528,7 @@ a.edit {
   -o-transition-property: -o-transform, opacity;
   transition-property: transform, opacity;
 }
+
 .isotope.no-transition,
 .isotope.no-transition .isotope-item,
 .isotope .isotope-item.no-transition {
@@ -505,16 +538,19 @@ a.edit {
   -o-transition-duration: 0s;
   transition-duration: 0s;
 }
+
 .isotope-item {
   z-index: 2;
 }
+
 .isotope-hidden.isotope-item {
   pointer-events: none;
   z-index: 1;
 }
+
 .year-regulator {
   padding-top: 13px;
-  
+
   .label {
     color: inherit;
     display: table-cell;
@@ -527,16 +563,22 @@ a.edit {
   .layout-slider {
     display: table-cell;
     width: 100%;
-    
+
     input[type="slider"] {
       visibility: hidden;
     }
   }
 }
+
 @media (max-width: 600px) {
   .hidden-600 {
     display: none !important;
   }
+}
+
+ul.collapsed {
+  max-height: 3*28px;
+  overflow: hidden;
 }
 
 .loading {
